language_tests/source_files/valid/generic_ref_equality_operator.tr
func same[T: std.ops.PartialEq](_ a: &T, _ b: &T) -> bool {
    a == b
}

func main() {
    if same(&1, &1) {
        std.print("ok\n")
    }
}
