language_tests/source_files/invalid/generic_operator_requires_bound.tr
// Missing bound should still fail (guard against over-permissive fallback).

func geq[T](_ a: T, _ b: T) -> bool {
    a >= b
}

func main() {
    let _ = geq(1, 2)
}
